# PulseNest

./: .claudeignore  .gitignore  CLAUDE.md  README.md  TODO.md  compare_files.py  conversation_log.md  gen_coeffs_v3.py  incunest_afe4490_spec.md  mow_afe4490_spec.md  platformio.ini  ppg_plotter.py  project_info.md  pulsenest_lab.ini  pulsenest_lab.py  pulsenest_lab_spec.md  spo2_cal_20260323_001600.csv  spo2_cal_20260323_002649.csv  spo2_cal_20260323_005943.csv  spo2_cal_20260323_005943.ods
examples/basic/: main.cpp
include/: mow_afe4490.h  protocentral_afe44xx.h  protocentral_hr_algorithm.h
lib/BeastDevices_INA3221/: Beastdevices_INA3221.cpp  Beastdevices_INA3221.h
lib/incunest_afe4490/: incunest_afe4490.cpp  incunest_afe4490.h  incunest_afe4490_platform_stub.h
lib/mow_afe4490/: mow_afe4490.cpp  mow_afe4490.h  mow_afe4490_platform_stub.h
scripts/: pre_build_hash.py
src/: main.cpp  mow_afe4490.cpp  protocentral_afe44xx.cpp  protocentral_hr_algorithm.cpp
test/stubs/: Arduino.h  SPI.h  esp_log.h
test/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
test/test_biquad/: test_biquad.cpp
test/test_hello/: test_hello.cpp
test/test_hr1/: test_hr1.cpp
test/test_hr2/: test_hr2.cpp
test/test_hr3/: test_hr3.cpp
test/test_spo2/: test_spo2.cpp
tools/offline_runner/: CMakeLists.txt  main.cpp
